add docker compose setup

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,7 +16,7 @@
           <a id="new-link" class="nav-link" aria-current="page" href="/new">New Item</a>
         </li>
       </ul>
-      <a href="https://www.islamicreliefcanada.org/emergencies/palestine/" class="btn main-button">Donate to Palestine</a>
+      <a href="https://www.islamicreliefcanada.org/emergencies/palestine/" target="_blank" rel="noopener noreferrer" class="btn main-button">Donate to Palestine</a>
     </div>
   </div>
 </nav>
