--- a/templates/edit.html
+++ b/templates/edit.html
@@ -9,35 +9,11 @@
     <br />
     <div class="container">
       <h1 class="display-5">Edit Item</h1>
-      <h1 class="display-6">ID: {{ .ItemId }}, Title: {{ .Title }}</h1>
+      <h1 class="display-6">Item ID: {{ .ItemId }}</h1>
+      <h1 class="display-6">Product: {{ .Product }}</h1>
       <div class="col-md-4">
-        <form id="new-item-form" method="POST">
-          <div class="form-group">
-            <label for="title">Title</label>
-            <input type="text" class="form-control" id="title" name="title" value="{{ .Title }}">
-          </div>
-          <div class="form-group">
-            <label for="quantity">Quantity</label>
-            <input type="number" class="form-control" id="quantity" name="quantity" value="{{ .Quantity }}">
-          </div>
-          <div class="form-group">
-            <label for="price">Price</label>
-            <input type="text" class="form-control" id="price" name="price" value="{{ .Price }}">
-          </div>
-          <div class="form-group">
-            <label for="owner">Owner</label>
-            <input type="text" class="form-control" id="owner" name="owner" value="{{ .Owner }}">
-          </div>
-          <div class="form-group">
-            <label for="supplier">Supplier</label>
-            <input type="text" class="form-control" id="supplier" name="supplier" value="{{ .Supplier }}">
-          </div>
-          <div class="form-group">
-            <label for="shipper">Shipper</label>
-            <input type="text" class="form-control" id="shipper" name="shipper" value="{{ .Shipper }}">
-          </div>
-          <br />
-          <button type="submit" class="btn main-button">Submit</button>
+        <form id="edit-item-form" method="POST">
+          {{ template "item_form" . }}
         </form>
       </div>
     </div>
