--- a/templates/new.html
+++ b/templates/new.html
@@ -11,32 +11,7 @@
       <h1 class="display-5">New Item</h1>
       <div class="col-md-4">
         <form id="new-item-form" method="POST">
-          <div class="form-group">
-            <label for="title">Title</label>
-            <input type="text" class="form-control" id="title" name="title">
-          </div>
-          <div class="form-group">
-            <label for="quantity">Quantity</label>
-            <input type="number" class="form-control" id="quantity" name="quantity">
-          </div>
-          <div class="form-group">
-            <label for="price">Price</label>
-            <input type="text" class="form-control" id="price" name="price">
-          </div>
-          <div class="form-group">
-            <label for="owner">Owner</label>
-            <input type="text" class="form-control" id="owner" name="owner">
-          </div>
-          <div class="form-group">
-            <label for="supplier">Supplier</label>
-            <input type="text" class="form-control" id="supplier" name="supplier">
-          </div>
-          <div class="form-group">
-            <label for="shipper">Shipper</label>
-            <input type="text" class="form-control" id="shipper" name="shipper">
-          </div>
-          <br />
-          <button type="submit" class="btn main-button">Submit</button>
+          {{ template "item_form" . }}
         </form>
       </div>
     </div>
