--- a/templates/item_form.html
+++ b/templates/item_form.html
@@ -1,19 +1,19 @@
 {{ define "item_form" }}
 <div class="form-group">
   <label for="product">Product</label>
-  <input type="text" class="form-control" id="product" name="product" value="{{ .Product }}">
+  <input type="text" class="form-control" id="product" name="product" value="{{ .Product }}" required>
 </div>
 <div class="form-group">
   <label for="quantity">Quantity</label>
-  <input type="number" class="form-control" id="quantity" name="quantity" value="{{ .Quantity }}">
+  <input type="number" class="form-control" id="quantity" name="quantity" value="{{ .Quantity }}" required>
 </div>
 <div class="form-group">
   <label for="price">Price</label>
-  <input type="text" class="form-control" id="price" name="price" value="{{ .Price }}">
+  <input type="text" class="form-control" id="price" name="price" value="{{ .Price }}" required>
 </div>
 <div class="form-group">
   <label for="supplier">Supplier</label>
-  <input type="text" class="form-control" id="supplier" name="supplier" value="{{ .Supplier }}">
+  <input type="text" class="form-control" id="supplier" name="supplier" value="{{ .Supplier }}" required>
 </div>
 <br />
 <button type="submit" class="btn main-button">Submit</button>
